styles.css
* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: normal;
    line-height: 22px;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    background-color: #E3E3E5;
}

.wrapper {
    max-width: 1000px;
    margin: 0 auto;
}

a {
    text-decoration: none;
    cursor: pointer;
    transition: 0.3s;
    color: #053750;
}
a:hover{
    font-weight: bold;
}
li {
    list-style: none;
}
.header {
    background-color: #053750;
    height: 110px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #E5E5E5;
}

.header__title {
    text-transform: capitalize;
    position: relative;
    border: #E3E3E5 2px solid;
    padding: 20px 110px;
}

.header__subtitle {
    text-transform: capitalize;
    position: absolute;
    background-color: #053750;
    top: 56px;
}
.about{
    padding: 0 25px;
    border-bottom: #053750 2px solid;
    border-top: #053750 2px solid;
    margin: 5px 0;
    text-align: justify;
}
.main-content{
    display: flex;
    flex-direction: row;
    /* flex-wrap: wrap; */
}
.sidebar {
    background-color: #053750;
    color: #E5E5E5;
    padding: 0 15px;
    width: 35%;
}

/* .sidebar__title {} */

.sidebar-list {
    padding-left: 5px;
}
.sidebar-list__item::before {
    content: "";
    margin-right: 6px;
    height: 19px;
    display: inline-block;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
.sidebar-list__item_mail::before{
    background-image: url(./assets/svg/mail.svg);
    width: 20px;
}
.sidebar-list__item_linkedin::before{
    background-image: url(./assets/svg/linkedin.svg);
    width: 20px;
}
.sidebar-list__item_telegram::before{
    background-image: url(./assets/svg/telegram.svg);
    width: 20px;
}
.sidebar-list__item_git::before{
    background-image: url(./assets/svg/github.svg);
    width: 20px;
}
.sidebar-list__item_discord::before{
    background-image: url(./assets/svg/discord.svg);
    width: 20px;
}
.sidebar__link {
    color: white;
}

.main {
    padding: 0 20px;
}
.main__title{
    background-color: #053750;
    padding: 5px 50px;
    border-bottom-right-radius: 50%;
    border-top-right-radius: 50%;
    width: 65%;
    margin-left: -20px;
    color: #E3E3E5;
}
/* .work {} */

.work__title {
    margin-top: 0;
}

/* .work__position {} */

.work__period {
    text-decoration: underline;
    text-decoration-style: dotted;
}

/* .work-list {} */

/* .education {} */

/* .education__title {} */

/* .education-list {} */

/* .education__name {} */

/* .education__position {} */

.education__period {
    text-decoration: underline;
    text-decoration-style: dotted;
}

/* .project {} */

/* .project__title {
    width: 100%;
} */
.project-list{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 10px;
}

.project__img {
    transition: 0.3s;
    transform: scale(1);
    height: 100%;
    width: 100%;
}
.project__img:hover{
    transform: scale(1.03);
}

